--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 Course: SDEV 255
 Date: 20 Sept 2022
 Final Project
-File: style.css
+File: style.html
 Group: 3 - Nikola Petreski and Nativida Barlow
 Frontend Student: Nativida Barlow
 Backend Student: Nikola Petreski
