--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,7 @@
                                 <div class="h1 mb-3"> <i class="bi bi-people"></i> </div>
                                 <h3 class="card-title mb-3"> In Person </h3>
                                 <p class="cart-text"> Traditional in-person classes are available on a campus near you.
-                                </p> <a href="courses.html" class="btn btn-danger">Learn More</a>
+                                </p> <a href="courses.ejs" class="btn btn-danger">Learn More</a>
                             </div>
                         </div>
                     </div>
