--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link data-rh="true" rel="shortcut icon" type="image" href="clueTitlePic.png" sizes="70x70">
+    <link data-rh="true" rel="shortcut icon" type="image" href="/public/image/clueTitlePic.png" sizes="70x70">
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/public/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -21,14 +21,13 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
                 <small>(Final Project)<br />
-                    <p class="white-text-with-blue-shadow"> Project Lead - Fullstack Developer: Nikola Petreski<br />
-                        UI/Design - Frontend Developer: Nativida Barlow </p>
+                    <p class="white-text-with-blue-shadow">  </p>
                 </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
                 data-bs-target="#navmenu"> <span class="navbar-toggler-icon"></span> </button>
             <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"> <a href="index.html" class="nav-link">Home</a> </li>
+                    <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
                     <li class="nav-item"> <a href="courses.html" class="nav-link">Courses</a> </li>
                     <li class="nav-item"> <a href="instructors.html" class="nav-link">Instructors</a> </li>
                     <li class="nav-item"> <a href="scheduleBuilder.html" class="nav-link">Schedule Builder</a> </li>
@@ -44,16 +43,11 @@
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
-                    <h1>School of CL<span class="standout2">U</span>E<br /><span class="text-warning"> Courses
-                        </span><img src="coursesIcon.png" alt="School of Clue" width="200" height="190" align="right"
-                            padding-top="15em" /> </h1>
+                    <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> Home </span> </h1>
                     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-                    <p class="lead my-4 white-text-with-red-shadow"> Each of the courses here at The School of Code was
-                        designed with success in mind. Here at The School of Code we don't just want to teach you what
-                        you need to know to pass, we want you to graduate already using what you learned here. We offer
-                        Science, Math, English and Web Developement.<br /><br /> </p> <button
-                        class="btn btn-dark btn-lg bg-primary text-light" data-bs-toggle data-bs-target="#enroll">Enroll
-                        Today! </button>
+                    <p class="lead my-4 white-text-with-red-shadow">  </p> <a
+                        href="scheduleBuilder.html"><button class="btn btn-dark btn-lg bg-primary text-light"
+                            data-bs-toggle data-bs-target="">Enroll Today! </button></a>
                 </div>
                 <section>
             </div>
@@ -64,18 +58,13 @@
     </h1>
     <!--Learn Sections-->
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <section style="background-color: black;"> <br />
-        <center><iframe style="border: 5px solid black;" src="https://www.youtube.com/embed/lrkW9LbznCk"
-                alt="'Matrix'<br/>Inspired Background Music" width="" height="" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe></center><br />
-    </section>
+  
     <!--Courses-->
     <section id="courses" class="bg-success text-light p-5">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="com-md p-5">
-                    <h2>Science</h2> <img src="scienceIcon.png" align="right" height="200" width="195" />
+                    <h2>Science</h2> <img src="/image/scienceIcon.png" align="right" height="200" width="195" />
                     <p class="lead"> <b>Course: SCI-101</b><br /> <b>Instructor:</b> Professor Plum<br />
                         <b>Description:</b> In this course, students will learn the importance of the natural and
                         physical sciences to everyday life. The emphasis is on science as a way to evaluate the validity
@@ -95,9 +84,9 @@
     <section id="aboutThePerformer" class="bg-secondary text-light p-5">
         <div class="container">
             <div class="row align-items-center justify-content-between">
-                <div class="col-md"> <img src="img/fundamentals.svg" class="img-fluid" alt=""> </div>
+                <div class="col-md"> <img src="/image/fundamentals.svg" class="img-fluid" alt=""> </div>
                 <div class="com-md p-5">
-                    <h2>Math</h2> <img src="mathIcon.png" align="right" height="200" width="195" />
+                    <h2>Math</h2> <img src="/image/mathIcon.png" align="right" height="200" width="195" />
                     <p class="lead"> <b>Course: MATH 123</b><br /> <b>Instructor:</b> Miss Scarlet<br />
                         <b>Description:</b> This course provides an introduction to the foundations of mathematics.
                         Topics include: logic and sets, construction of, representation of, estimation of, algebraic,
@@ -116,7 +105,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="com-md p-5">
-                    <h2>English</h2> <img src="englishIcon.png" align="right" height="200" width="195" />
+                    <h2>English</h2> <img src="/image/englishIcon.png" align="right" height="200" width="195" />
                     <p class="lead"> <b>Course: ENG 111</b><br /> <b>Instructor:</b> Colonel Mustard<br />
                         <b>Description:</b> This course incorporates reading, research, and critical thinking. Emphasis
                         is placed on the various forms of expository writing such as process, description, narration,
@@ -126,7 +115,7 @@
                     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
                     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <a href="scheduleBuilder.html"
                         class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>
-                    <div class="col-md"> <img src="img/react.svg" class="img-fluid" alt=""> </div>
+                    <div class="col-md"> <img src="/image/react.svg" class="img-fluid" alt=""> </div>
                 </div>
             </div>
         </div>
@@ -137,7 +126,7 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-md"> <img src="img/fundamentals.svg" class="img-fluid" alt=""> </div>
                 <div class="com-md p-5">
-                    <h2>Web App Development</h2> <img src="webDevelopmentIcon.png" align="right" height="200"
+                    <h2>Web App Development</h2> <img src="/image/webDevelopmentIcon.png" align="right" height="200"
                         width="195" />
                     <p class="lead"> <b>Course: SDEV 255</b><br /> <b>Instructor:</b> Mrs. Peacock<br />
                         <b>Description:</b> Students will learn how to use and apply client and server-side scripting
