--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link data-rh="true" rel="shortcut icon" type="image" href="/public/image/clueTitlePic.png" sizes="70x70">
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -19,8 +19,8 @@
 <body>
     <!--NavBar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
-        <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
-                <small>(Final Project)<br />
+        <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> 
+                <small><br />
                     <p class="white-text-with-blue-shadow">  </p>
                 </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
                 data-bs-target="#navmenu"> <span class="navbar-toggler-icon"></span> </button>
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
-                    <li class="nav-item"> <a href="courses.html" class="nav-link">Courses</a> </li>
-                    <li class="nav-item"> <a href="instructors.html" class="nav-link">Instructors</a> </li>
-                    <li class="nav-item"> <a href="scheduleBuilder.html" class="nav-link">Schedule Builder</a> </li>
-                    <li class="nav-item"> <a href="cart.html" class="nav-link">Cart</a> </li>
+                    <li class="nav-item"> <a href="/" class="nav-link">Courses</a> </li>
+                   
+                 
+                    
                     <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
                 </ul>
             </div>
@@ -46,154 +46,21 @@
                     <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> Home </span> </h1>
                     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
                     <p class="lead my-4 white-text-with-red-shadow">  </p> <a
-                        href="scheduleBuilder.html"><button class="btn btn-dark btn-lg bg-primary text-light"
-                            data-bs-toggle data-bs-target="">Enroll Today! </button></a>
+                        href="scheduleBuilder.html"></a>
                 </div>
                 <section>
             </div>
         </div>
     </section>
     <h1>
-        <center>Courses</center>
+        <center>My Courses</center>
     </h1>
     <!--Learn Sections-->
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
   
     <!--Courses-->
-    <section id="courses" class="bg-success text-light p-5">
-        <div class="container">
-            <div class="row align-items-center justify-content-between">
-                <div class="com-md p-5">
-                    <h2>Science</h2> <img src="/image/scienceIcon.png" align="right" height="200" width="195" />
-                    <p class="lead"> <b>Course: SCI-101</b><br /> <b>Instructor:</b> Professor Plum<br />
-                        <b>Description:</b> In this course, students will learn the importance of the natural and
-                        physical sciences to everyday life. The emphasis is on science as a way to evaluate the validity
-                        of scientific information in the media and on the Internet. The goal is for students to apply
-                        the basic laws, concepts, and themes that underlie our natural world in order to place important
-                        public issues such as the environment, energy and medical advances in a scientific risk
-                        assessment and risk management context.<br /> <b>Avaialability:</b> In-Person, Hybrid,
-                        Virtural<br /> <b>Length:</b> 8 week<br /> <b>Credit Hrs:</b> 3<br /> </p>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <a href="scheduleBuilder.html"
-                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll</a>
-                    <div class="col-md"> <img src="img/react.svg" class="img-fluid" alt=""> </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--About the Performer-->
-    <section id="aboutThePerformer" class="bg-secondary text-light p-5">
-        <div class="container">
-            <div class="row align-items-center justify-content-between">
-                <div class="col-md"> <img src="/image/fundamentals.svg" class="img-fluid" alt=""> </div>
-                <div class="com-md p-5">
-                    <h2>Math</h2> <img src="/image/mathIcon.png" align="right" height="200" width="195" />
-                    <p class="lead"> <b>Course: MATH 123</b><br /> <b>Instructor:</b> Miss Scarlet<br />
-                        <b>Description:</b> This course provides an introduction to the foundations of mathematics.
-                        Topics include: logic and sets, construction of, representation of, estimation of, algebraic,
-                        geometric, ordering and metric structures on natural numbers and whole numbers.<br />
-                        <b>Avaialability:</b> In-Person, Hybrid, Virtural<br /> <b>Length:</b> 8 week<br /> <b>Credit
-                            Hrs:</b> 3<br /> </p>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <a href="scheduleBuilder.html"
-                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>
-                </div>
-            </div>
-        </div>
-        <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    </section>
-    <!--Acerca del Interpriele-->
-    <section id="learn" class="bg-success text-light p-5">
-        <div class="container">
-            <div class="row align-items-center justify-content-between">
-                <div class="com-md p-5">
-                    <h2>English</h2> <img src="/image/englishIcon.png" align="right" height="200" width="195" />
-                    <p class="lead"> <b>Course: ENG 111</b><br /> <b>Instructor:</b> Colonel Mustard<br />
-                        <b>Description:</b> This course incorporates reading, research, and critical thinking. Emphasis
-                        is placed on the various forms of expository writing such as process, description, narration,
-                        comparison, analysis, persuasion, and argumentation. A research paper is required.<br />
-                        <b>Avaialability:</b> In-Person, Hybrid, Virtural<br /> <b>Length:</b> 8 week<br /> <b>Credit
-                            Hrs:</b> 3<br /> </p>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <a href="scheduleBuilder.html"
-                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>
-                    <div class="col-md"> <img src="/image/react.svg" class="img-fluid" alt=""> </div>
-                </div>
-            </div>
-        </div>
-        <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    </section>
-    <section id="aboutThePerformer" class="bg-secondary text-light p-5">
-        <div class="container">
-            <div class="row align-items-center justify-content-between">
-                <div class="col-md"> <img src="img/fundamentals.svg" class="img-fluid" alt=""> </div>
-                <div class="com-md p-5">
-                    <h2>Web App Development</h2> <img src="/image/webDevelopmentIcon.png" align="right" height="200"
-                        width="195" />
-                    <p class="lead"> <b>Course: SDEV 255</b><br /> <b>Instructor:</b> Mrs. Peacock<br />
-                        <b>Description:</b> Students will learn how to use and apply client and server-side scripting
-                        and application programming interfaces to build web-based applications which interact with a
-                        data source including XML and JSON. Students will prepare both front and back end content using
-                        techniques including, Hyper Text Markup Language and JavaScript to create dynamic data-driven
-                        web interfaces. The course builds on the Web Site Development course, emphasizing full stack
-                        implementation.<br /> <b>Avaialability:</b> In-Person, Hybrid, Virtural<br /> <b>Length:</b> 8
-                        week<br /> <b>Credit Hrs:</b> 3<br /> </p>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <a href="scheduleBuilder.html"
-                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>
-                </div>
-            </div>
-        </div>
-        <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    </section>
-    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <!--Contact & Map-->
-    <section class="p-5">
-        <div class="container">
-            <div class="row g-4">
-                <div class="col-md">
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-                    <h2 class="text-center mb-4">Contact Info</h2>
-                    <ul class="list-group list-group-flush lead">
-                        <li class="list-group-item"> <span class="fw-bold">Main Location:</span> 1111 Mansion Place,
-                            Beverly Hills, California 90210 </li>
-                        <li class="list-group-item"> <span class="fw-bold">Enrollment Phone:</span> (555) 555-5555 </li>
-                        <li class="list-group-item"> <span class="fw-bold">Student Phone:</span> (123) 456-7890 </li>
-                        <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-                        <li class="list-group-item"> <span class="fw-bold">Enrollment Email:</span>
-                            sdev255group3@ivytech.edu </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    </section>
-    <!--Footer-->
-    <footer class="p-5 bg-dark text-white text-center position-relative">
-        <div class="container">
-            <p class="lead">Copyright &copy; 2022 - School of Clue (Final Project)</p> <a href="#"
-                class="position-absolute bottom-0 end-0 p-5"> <i class="bi bi-arrow-up-circle h1"></i> </a>
-        </div>
-        <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    </footer> <!-- Modal -->
-    <div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="enrollLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="enrollLabel">Modal title</h5> <button type="button" class="btn-close"
-                        data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p class="lead">Fill out this form and we will get back to you.</p>
-                    <form>
-                        <div class="mb-3"> <label for="first-name" class="col-form-label"> First Name: <input
-                                    type="text" class="form-control" id="first-name"> </label> </div>
-                    </form>
-                </div>
-                <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-                <div class="modal-footer"> <button type="button" class="btn btn-secondary"
-                        data-bs-dismiss="modal">Close</button> <button type="button" class="btn btn-primary">Save
-                        changes</button> </div>
-            </div>
-        </div>
+    <div id="myCourses">
+        <button>drop a course</button><button>add more courses</button>
     </div>
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
