--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link data-rh="true" rel="shortcut icon" type="image" href="/public/image/clueTitlePic.png" sizes="70x70">
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -20,7 +20,7 @@
     <!--NavBar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
-                <small>(Final Project)<br />
+                <small><br />
                     <p class="white-text-with-blue-shadow">  </p>
                 </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
                 data-bs-target="#navmenu"> <span class="navbar-toggler-icon"></span> </button>
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
-                    <li class="nav-item"> <a href="courses.html" class="nav-link">Courses</a> </li>
-                    <li class="nav-item"> <a href="instructors.html" class="nav-link">Instructors</a> </li>
-                    <li class="nav-item"> <a href="scheduleBuilder.html" class="nav-link">Schedule Builder</a> </li>
-                    <li class="nav-item"> <a href="cart.html" class="nav-link">Cart</a> </li>
+                    <li class="nav-item"> <a href="/courses" class="nav-link">Courses</a> </li>
+                   
+                    
+                    
                     <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
                 </ul>
             </div>
@@ -46,8 +46,7 @@
                     <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> Home </span> </h1>
                     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
                     <p class="lead my-4 white-text-with-red-shadow">  </p> <a
-                        href="scheduleBuilder.html"><button class="btn btn-dark btn-lg bg-primary text-light"
-                            data-bs-toggle data-bs-target="">Enroll Today! </button></a>
+                        href="scheduleBuilder.html"></a>
                 </div>
                 <section>
             </div>
