--- a/public/style.css
+++ b/public/style.css
@@ -93,7 +93,10 @@ button:hover {
     color: #ffffff;
 }*/
 
-#myCourses{
+form{
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+
