--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,9 +28,10 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
-                    <li class="nav-item"> <a href="/courses" class="nav-link">Courses</a> </li>
+                    <li class="nav-item"> <a href="/schedule" class="nav-link">Sign Up</a> </li>
                    
-                    
+                    <li class="nav-item"> <a href="/mySchedule" class="nav-link">Schedule</a> </li>
+                   
                     
                     <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
                 </ul>
@@ -72,8 +73,8 @@
                         public issues such as the environment, energy and medical advances in a scientific risk
                         assessment and risk management context.<br /> <b>Avaialability:</b> In-Person, Hybrid,
                         Virtural<br /> <b>Length:</b> 8 week<br /> <b>Credit Hrs:</b> 3<br /> </p>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <a href="scheduleBuilder.html"
-                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll</a>
+                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <!--<a href="scheduleBuilder.html"
+                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>-->
                     <div class="col-md"> <img src="img/react.svg" class="img-fluid" alt=""> </div>
                 </div>
             </div>
@@ -92,8 +93,8 @@
                         geometric, ordering and metric structures on natural numbers and whole numbers.<br />
                         <b>Avaialability:</b> In-Person, Hybrid, Virtural<br /> <b>Length:</b> 8 week<br /> <b>Credit
                             Hrs:</b> 3<br /> </p>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <a href="scheduleBuilder.html"
-                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>
+                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <!--<a href="scheduleBuilder.html"
+                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>-->
                 </div>
             </div>
         </div>
@@ -112,8 +113,8 @@
                         <b>Avaialability:</b> In-Person, Hybrid, Virtural<br /> <b>Length:</b> 8 week<br /> <b>Credit
                             Hrs:</b> 3<br /> </p>
                     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <a href="scheduleBuilder.html"
-                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>
+                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <!--<a href="scheduleBuilder.html"
+                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>-->
                     <div class="col-md"> <img src="/image/react.svg" class="img-fluid" alt=""> </div>
                 </div>
             </div>
@@ -135,8 +136,8 @@
                         web interfaces. The course builds on the Web Site Development course, emphasizing full stack
                         implementation.<br /> <b>Avaialability:</b> In-Person, Hybrid, Virtural<br /> <b>Length:</b> 8
                         week<br /> <b>Credit Hrs:</b> 3<br /> </p>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <a href="scheduleBuilder.html"
-                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>
+                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <!--Barlow/Petreski-Group3-Fall2022-IVY Tech--> <!--<a href="scheduleBuilder.html"
+                        class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i>Enroll </a>-->
                 </div>
             </div>
         </div>
