--- a/views/404.ejs
+++ b/views/404.ejs
@@ -40,24 +40,9 @@
     </nav>
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
     <!--Showcase-->
-    <div class="class content">
-        <h2>All Blogs</h2>
-    
-        
-    <% if (classes.length > 0) { %>
-      <% classes.forEach(newClass => { %>
-        <a class="single" href="/classes/<%= newClass._id %>">
-          <h3 class="title"><%= newClass.title %></h3>
-          <p class="snippet"><%= newClass.snippet %></p>
-          <p class="body"><%= newClass.body %></p>
-        </a>
-      <% }) %>
-    <% } else { %>
-      <p>There are no blogs to display...</p>
-    <% } %>
-        
-      </div>
+    <div>
       
+      sorry page not found :)
     </div>
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
