--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
-                    <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> Home </span> </h1>
+                    <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> </span> </h1>
                     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
                     <p class="lead my-4 white-text-with-red-shadow">  </p> <a
                         href="scheduleBuilder.html"></a>
