--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
                     <li class="nav-item"> <a href="/schedule" class="nav-link">Sign Up</a> </li>
                    
-                    <li class="nav-item"> <a href="/mySchedule" class="nav-link">Schedule</a> </li>
+                    <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
                    
                     
                     <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
