--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -30,9 +30,7 @@
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
                     <li class="nav-item"> <a href="/schedule" class="nav-link">Sign Up</a> </li>
                    
-                    <li class="nav-item"> <a href="/mySchedule" class="nav-link">Schedule</a> </li>
-                   
-                    
+                    <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
                     <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
                 </ul>
             </div>
@@ -44,7 +42,7 @@
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
-                    <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> Home </span> </h1>
+                    <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> </span> </h1>
                     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
                     <p class="lead my-4 white-text-with-red-shadow">  </p> <a
                         href="scheduleBuilder.html"></a>
@@ -74,9 +72,8 @@
             <button>Submit</button>
           </form>
         </div>
-      
-      
-    </div>
+      </div>
+        </div>
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
