--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,9 @@
-/*-------------------------------------------------------------------
-Course: SDEV 255
-Date: 20 Sept 2022
-Final Project
-File: style.html
-Group: 3 - Nikola Petreski and Nativida Barlow
-Frontend Student: Nativida Barlow
-Backend Student: Nikola Petreski
-Instructor: Professor Troy Hamby
-IVY Tech Community College
-------------------------------------------------------------------->*/
+
 body::before{
   display: block;
   content: '';
   height: 130px;
-  background-color: #000000;
+  background-color:#212529;
 }
 a {
   text-decoration: none;
@@ -100,3 +90,36 @@ form{
   flex-direction: column;
 }
 
+#myCourses{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.details{
+  position: relative;
+}
+
+.delete{
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: #f44336;
+  color: #fff;
+  padding: 0.5em 1em;
+  border-radius: 0 0 0 0.5em;
+  cursor: pointer;
+}
+
+.delete:hover{
+  cursor: pointer;
+  box-shadow: 1px 2px 3px rgba( 0,0,0,0.2)
+}
+
+.single {
+    display: block;
+    margin: 40px 0;
+    padding-left: 30px;
+    border-left: 6px solid crimson
+}
