--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -63,11 +63,11 @@
 
         <div class="create-class-content">
           <form action="/classes" method="POST">
-            <label for="title">Class title:</label>
+            <label for="title">Instructor Name:</label>
             <input type="text" id="title" name="title" required>
-            <label for="snippet">Class snippet:</label>
+            <label for="snippet">Credit Hours:</label>
             <input type="text" id="snippet" name="snippet" required>
-            <label for="body">Class body:</label>
+            <label for="body">Course Name:</label>
             <textarea id="body" required name="body"></textarea>
             <button>Submit</button>
           </form>
