--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,4 @@
-<!------------------------------------------------------------------- Course: SDEV 255 Date: 20 Sept 2022 Final Project File: index.html Group: 3 - Nikola Petreski and Nativida Barlow Frontend Student: Nativida Barlow Backend Student: Nikola Petreski Instructor: Professor Zachary Hamby IVY Tech Community College ------------------------------------------------------------------->
+<!------------------------------------------------------------------- Course: SDEV 255 Date: 20 Sept 2022 Final Project File: courses.html Group: 3 - Nikola Petreski and Nativida Barlow Frontend Student: Nativida Barlow Backend Student: Nikola Petreski Instructor: Professor Zachary Hamby IVY Tech Community College ------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,33 +6,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link data-rh="true" rel="shortcut icon" type="image" href="clueTitlePic.png" sizes="70x70">
+    <link data-rh="true" rel="shortcut icon" type="image" href="/public/image/clueTitlePic.png" sizes="70x70">
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <title>School of Clue:: Home</title>
+    <title>School of Clue:: Admissions</title>
 </head>
 <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
 
 <body>
     <!--NavBar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
-        <div class="container"> <a href="#" class="navbar-brand"><b>School of CLUE</b> 
-              
-                    <p class="white-text-with-blue-shadow"> <br />
-                        </p>
+        <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
+                <small><br />
+                    <p class="white-text-with-blue-shadow">  </p>
                 </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
                 data-bs-target="#navmenu"> <span class="navbar-toggler-icon"></span> </button>
             <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"> <a href="index.ejs" class="nav-link">Home</a> </li>
-                    <li class="nav-item"> <a href="/courses" class="nav-link">Sign Up</a> </li>
-                    <li class="nav-item"> <a href="instructors.html" class="nav-link">Instructors</a> </li>
-                    <li class="nav-item"> <a href="scheduleBuilder.html" class="nav-link">Schedule Builder</a> </li>
-                    <li class="nav-item"> <a href="cart.html" class="nav-link">Cart</a> </li>
+                    <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
+                    <li class="nav-item"> <a href="/schedule" class="nav-link">Sign Up</a> </li>
+                   
+                    <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
+                   
+                    
                     <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
                 </ul>
             </div>
@@ -40,10 +40,29 @@
     </nav>
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
     <!--Showcase-->
-    <div>
+    <section class="bg-dark text-light p-5 p-lg-0 text-center text-sm-start">
+        <div class="container">
+            <div class="d-sm-flex align-items-center justify-content-between">
+                <div>
+                    <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> </span> </h1>
+                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+                    <p class="lead my-4 white-text-with-red-shadow">  </p> <a
+                        href="scheduleBuilder.html"></a>
+                </div>
+                <section>
+            </div>
+        </div>
+    </section>
+    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+    <!--Showcase-->
+    
       
-      sorry page not found :)
+      <h1>sorry page not found :)</h1>
+        <h2>404</h2>
+        <p>the page you are looking for does not exist</p>
+        <a href="/" class="btn btn-primary">Back to Home</a>
     </div>
+    </body>
     <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
