--- a/views/details.ejs
+++ b/views/details.ejs
@@ -43,9 +43,10 @@
     -->
         <div class="details content">
             
-            console.log(newClass.title)
-            <h2><%= newClass.title %></h2>
+           
             <div class="content">
+              <h2><%= newClass.title %></h2>
+            <p><%= newClass.snippet %></p>
               <p><%= newClass.body %></p>
          </div>
             <a class="delete" data-doc="<%= newClass._id %>">delete</a>
