--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link data-rh="true" rel="shortcut icon" type="image" href="/public/image/clueTitlePic.png" sizes="70x70">
-    
+    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>School of Clue:: Admissions</title>
 </head>
-
+<!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
 
 <body>
     <!--NavBar-->
@@ -24,7 +24,7 @@
                     <p class="white-text-with-blue-shadow">  </p>
                 </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
                 data-bs-target="#navmenu"> <span class="navbar-toggler-icon"></span> </button>
-            
+            <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
@@ -38,7 +38,8 @@
             </div>
         </div>
     </nav>
-    
+    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+    <!--Showcase-->
     <section class="bg-dark text-light p-5 p-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
@@ -52,44 +53,34 @@
             </div>
         </div>
     </section>
-    <div>
-   
-        <div class="details content">
-            
-           
-            <div class="content">
-              <h2><%= newClass.title %></h2>
-            <p><%= newClass.snippet %></p>
-              <p><%= newClass.body %></p>
-         </div>
-            <a class="delete" data-doc="<%= newClass._id %>">
-              <img src ='/trashcan.svg' alt='trashcan' width='20' height='20'>
-            </a>
-         
-          <script>
-            const trashcan = document.querySelector('a.delete');
-            trashcan.addEventListener('click', (e) => {
-              const endpoint = `/classes/${trashcan.dataset.doc}`;
-              fetch(endpoint, {
-                method: 'DELETE',
-              })
-              .then(response => response.json())
-              .then(data => window.location.href = data.redirect)
-              .catch(err => console.log(err));
-            });
-            
-          </script>
 
 
+<div>
+    <form>
+        <h2>Log in</h2>
+        <label for "email">Email</label>
+        <input type="text" name="email" required>
+        <div class="email error"></div>
+        <label for "password">Password</label>
+        <input type="password" name="password" required>
+        <div class="password error"></div>
+        <button>Log in</button>
+    </form>
+<script>
+const form = document.querySelector('form');
+form.addEventListener('submit', e => {
+    e.preventDefault();
+    /*
+    const email = form.email.value;
+    const password = form.password.value;
+    auth.createUserWithEmailAndPassword(email, password).then(cred => {
+        console.log(cred.user);
+        const modal = document.querySelector('#modal-signup');
+        M.Modal.getInstance(modal).close();
+        form.reset(); 
+    });*/
+});
+</script> 
 </div>
-      </div>
-      </div>
     
-    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+    
