--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,3 @@
-<!------------------------------------------------------------------- Course: SDEV 255 Date: 20 Sept 2022 Final Project File: courses.html Group: 3 - Nikola Petreski and Nativida Barlow Frontend Student: Nativida Barlow Backend Student: Nikola Petreski Instructor: Professor Zachary Hamby IVY Tech Community College ------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,7 +14,7 @@
     <title>School of Clue:: Admissions</title>
 </head>
 
-
+ 
 <body>
     <!--NavBar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
@@ -53,43 +52,54 @@
         </div>
     </section>
     <div>
-   
-        <div class="details content">
-            
-           
-            <div class="content">
-              <h2><%= newClass.title %></h2>
-            <p><%= newClass.snippet %></p>
-              <p><%= newClass.body %></p>
-         </div>
-            <a class="delete" data-doc="<%= newClass._id %>">
-              <img src ='/trashcan.svg' alt='trashcan' width='20' height='20'>
-            </a>
-         
-          <script>
-            const trashcan = document.querySelector('a.delete');
-            trashcan.addEventListener('click', (e) => {
-              const endpoint = `/classes/${trashcan.dataset.doc}`;
-              fetch(endpoint, {
-                method: 'DELETE',
-              })
-              .then(response => response.json())
-              .then(data => window.location.href = data.redirect)
-              .catch(err => console.log(err));
-            });
-            
-          </script>
-
-
-</div>
-      </div>
-      </div>
+        <form>
+            <h2>Sign Up</h2>
+            <label for "email">Email</label>
+            <input type="text" name="email" required>
+            <div class="email error"></div>
+            <label for "password">Password</label>
+            <input type="password" name="password" required>
+            <div class="password error"></div>
+            <button>Sign up</button>
+        </form>
+<script>
+    const form = document.querySelector('form');
+    const emailError = document.querySelector('.email.error');
+    const passwordError = document.querySelector('.password.error');
+    form.addEventListener('submit', async (e) => {
+        e.preventDefault();
     
-    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+    emailError.textContent = ' ';
+    passwordError.textContent = '';
+
+        const email = form.email.value;
+        const password = form.password.value;
+
+        try{
+const res = await fetch('/signup', {
+    method: 'POST',
+    body: JSON.stringify({email, password}),
+    headers: {'Content-Type': 'application/json'}
+});
+const data = await res.json();
+if(data.errors){
+   emailError.textContent = data.errors.email;
+    passwordError.textContent = data.errors.password;
+} if (data.user) {
+    location.assign('/');
+}
+        } 
+        catch(err){
+            console.log(err);
+        }
+    });
+</script> 
+
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </body>
 
-</html>
+</html> 
