--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,4 +1,3 @@
-<!------------------------------------------------------------------- Course: SDEV 255 Date: 20 Sept 2022 Final Project File: courses.html Group: 3 - Nikola Petreski and Nativida Barlow Frontend Student: Nativida Barlow Backend Student: Nikola Petreski Instructor: Professor Zachary Hamby IVY Tech Community College ------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,9 +14,9 @@
     <title>School of Clue:: Admissions</title>
 </head>
 
-
+ 
 <body>
-    <!--NavBar-->
+    
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
                 <small><br />
@@ -28,12 +27,10 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
-                    <li class="nav-item"> <a href="/schedule" class="nav-link">Sign Up</a> </li>
-                   
+                    <li class="nav-item"> <a href="/schedule" class="nav-link">Add Course</a> </li>    
                     <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
-                   
-                    
-                    <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
+                    <li class="nav-item"> <a href="/signup" class="nav-link">Sign Up</a> </li>             
+                    <li class="nav-item"> <a href="/login" class="nav-link">Log In</a> </li>
                 </ul>
             </div>
         </div>
@@ -44,7 +41,7 @@
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
                     <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> </span> </h1>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+                    
                     <p class="lead my-4 white-text-with-red-shadow">  </p> <a
                         href="scheduleBuilder.html"></a>
                 </div>
