--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -1,4 +1,3 @@
-<!------------------------------------------------------------------- Course: SDEV 255 Date: 20 Sept 2022 Final Project File: courses.html Group: 3 - Nikola Petreski and Nativida Barlow Frontend Student: Nativida Barlow Backend Student: Nikola Petreski Instructor: Professor Zachary Hamby IVY Tech Community College ------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,43 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link data-rh="true" rel="shortcut icon" type="image" href="/public/image/clueTitlePic.png" sizes="70x70">
-    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+    
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>School of Clue:: Admissions</title>
 </head>
-<!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
 
+ 
 <body>
-    <!--NavBar-->
+    
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
-        <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> 
+        <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
                 <small><br />
                     <p class="white-text-with-blue-shadow">  </p>
                 </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
                 data-bs-target="#navmenu"> <span class="navbar-toggler-icon"></span> </button>
-            <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+            
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
-                    <li class="nav-item"> <a href="/schedule" class="nav-link">Sign Up</a> </li>
-                   
+                    <li class="nav-item"> <a href="/schedule" class="nav-link">Add Course</a> </li>    
                     <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
-                    <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
+                    <li class="nav-item"> <a href="/signup" class="nav-link">Sign Up</a> </li>             
+                    <li class="nav-item"> <a href="/login" class="nav-link">Log In</a> </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <!--Showcase-->
+    
     <section class="bg-dark text-light p-5 p-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
                     <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> </span> </h1>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+                    
                     <p class="lead my-4 white-text-with-red-shadow">  </p> <a
                         href="scheduleBuilder.html"></a>
                 </div>
