--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,7 +16,7 @@
 
  
 <body>
-    <!--NavBar-->
+    
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
                 <small><br />
@@ -27,12 +27,10 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
-                    <li class="nav-item"> <a href="/schedule" class="nav-link">Sign Up</a> </li>
-                   
+                    <li class="nav-item"> <a href="/schedule" class="nav-link">Add Course</a> </li>    
                     <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
-                   
-                    
-                    <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
+                    <li class="nav-item"> <a href="/signup" class="nav-link">Sign Up</a> </li>             
+                    <li class="nav-item"> <a href="/login" class="nav-link">Log In</a> </li>
                 </ul>
             </div>
         </div>
@@ -43,7 +41,7 @@
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
                     <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> </span> </h1>
-                    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+                    
                     <p class="lead my-4 white-text-with-red-shadow">  </p> <a
                         href="scheduleBuilder.html"></a>
                 </div>
@@ -70,7 +68,7 @@
         e.preventDefault();
     
     emailError.textContent = ' ';
-    passwordError.textContent = '';
+    passwordError.textContent = ' ';
 
         const email = form.email.value;
         const password = form.password.value;
