--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,3 @@
-<!------------------------------------------------------------------- Course: SDEV 255 Date: 20 Sept 2022 Final Project File: courses.html Group: 3 - Nikola Petreski and Nativida Barlow Frontend Student: Nativida Barlow Backend Student: Nikola Petreski Instructor: Professor Zachary Hamby IVY Tech Community College ------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link data-rh="true" rel="shortcut icon" type="image" href="/public/image/clueTitlePic.png" sizes="70x70">
-    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+    
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>School of Clue:: Admissions</title>
 </head>
-<!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
 
+ 
 <body>
     <!--NavBar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
@@ -24,22 +23,19 @@
                     <p class="white-text-with-blue-shadow">  </p>
                 </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
                 data-bs-target="#navmenu"> <span class="navbar-toggler-icon"></span> </button>
-            <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+            
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
-                    <li class="nav-item"> <a href="/schedule" class="nav-link">Sign Up</a> </li>
-                   
+                    <li class="nav-item"> <a href="/schedule" class="nav-link">Add Course</a> </li>    
                     <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
-                   
-                    
-                    <li class="nav-item"> <a href="logIn.html" class="nav-link">Log In</a> </li>
+                    <li class="nav-item"> <a href="/signup" class="nav-link">Sign Up</a> </li>             
+                    <li class="nav-item"> <a href="/login" class="nav-link">Log In</a> </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
-    <!--Showcase-->
+    
     <section class="bg-dark text-light p-5 p-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
@@ -53,9 +49,7 @@
             </div>
         </div>
     </section>
-
-
-<div>
+    <div>
     <form>
         <h2>Log in</h2>
         <label for "email">Email</label>
@@ -68,19 +62,39 @@
     </form>
 <script>
 const form = document.querySelector('form');
-form.addEventListener('submit', e => {
+const emailError = document.querySelector('.email.error');
+const passwordError = document.querySelector('.password.error');
+form.addEventListener('submit',   async  (e) => {
     e.preventDefault();
-    /*
-    const email = form.email.value;
-    const password = form.password.value;
-    auth.createUserWithEmailAndPassword(email, password).then(cred => {
-        console.log(cred.user);
-        const modal = document.querySelector('#modal-signup');
-        M.Modal.getInstance(modal).close();
-        form.reset(); 
-    });*/
+    
+    emailError.textContent = ' ';
+    passwordError.textContent = ' ';
+
+        const email = form.email.value;
+        const password = form.password.value;
+
+        try{
+const res = await fetch('/signup', {
+    method: 'POST',
+    body: JSON.stringify({email, password}),
+    headers: {'Content-Type': 'application/json'}
+});
+const data = await res.json();
+if(data.errors){
+   emailError.textContent = data.errors.email;
+    passwordError.textContent = data.errors.password;
+} if (data.user) {
+    location.assign('/');
+}
+        } 
+        catch(err){
+            console.log(err);
+        }
 });
 </script> 
 </div>
-    
-    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+     </body>
